fix assignment to servergroups